force-app/main/default/objects/ControlPointVisit__c/ControlPointVisit__c.object-meta.xml
<CustomObject>
    <label>Control Point Visit</label>
    <nameField>
        <displayFormat>VIS-{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Control Point Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>