force-app/main/default/objects/ControlPointVisit__c/fields/ControlPoint__c.field-meta.xml
<CustomField>
    <fullName>ControlPoint__c</fullName>
    <label>Control Point</label>
    <referenceTo>ControlPoint__c</referenceTo>
    <relationshipLabel>Control Point Visits</relationshipLabel>
    <relationshipName>Control_Point_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>