force-app/main/default/objects/ControlPointVisit__c/fields/Observations__c.field-meta.xml
<CustomField>
    <fullName>Observations__c</fullName>
    <label>Observaciones</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>