force-app/main/default/objects/ControlPointVisit__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Cantidad</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>