force-app/main/default/objects/ControlPointVisit__c/fields/TechnicianUser__c.field-meta.xml
<CustomField>
    <fullName>TechnicianUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Control_Point_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>