force-app/main/default/objects/ControlPointVisit__c/fields/WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderId__c</fullName>
    <label>ID Orden de Trabajo</label>
    <length>18</length>
    <type>Text</type>
</CustomField>